--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <div class="d-flex align-items-center justify-content-center" style="min-height: 100vh;">
             <div class="container border-col form-container p-5">
                 <h3 class="text-center">Contácteme</h3>
-                <form action="mailto:andreumagu@gmail.com" enctype="text/plain" method="post">
+                <form action="https://formsubmit.co/andreumagu@gmail.com" method="POST">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Nombre:</label>
                         <input type="text" class="form-control" id="nombre" name="Nombre" aria-describedby="emailHelp" placeholder="Introduce tu nombre">
