--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <li class="list-group-item">PHP</li>
                         <li class="list-group-item">Python</li>
                         <li class="list-group-item">Java</li>
-                        <li class="list-group-item" data-toggle="collapse" data-target="#demo4"><i class="bi bi-arrow-down-short"></i></li>
+                        <li class="list-group-item" data-toggle="collapse" data-target="#demo4"><i class="bi bi-caret-down-fill" id="arrow" onclick="changeArrow()"></i></li>
                         <div id="demo4" class="collapse">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">HTML</li>
