Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="col-sm mx-2 border-col py-4">
                 <div data-toggle="collapse" data-target="#demo3">
                     <i class="bi bi-hourglass i-dark"></i>
-                    <h4>Experiéncia</h4>
+                    <h4>Experiencia</h4>
                 </div>
                 <div id="demo3" class="pt-3">
                     <p class="title-dest font-weight-bold">Laboral</p>
