--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     </div>
     <div class="container text-center font-weight-bold container-description">
         <p class="m-0">
-            Soy Andreu, un Desarrollador Web. He tenido la oportunidad de colaborar en proyectos web en el ámbito estudiantil. Mi pasión radica en crear experiencias web atractivas y altamente funcionales, donde la creatividad se une con la atención a los detalles. Mi enfoque se centra en la usabilidad y el diseño, siempre con el objetivo de ofrecer una experiencia de usuario excepcional.
+            Desarrollador Backend especializado en Java con experiencia en el desarrollo de aplicaciones utilizando Spring Boot y arquitecturas de microservicios.<br>
+
+Me gusta por crear soluciones eficientes y escalables y tengo conocimientos de bases de datos. Además, poseo conocimientos en pruebas unitarias, garantizando la calidad y fiabilidad del software.<br>
+
+Me gusta mantenerme actualizado con la tecnología, ya que soy un apasionado de ella y me dedico a aprender continuamente para ofrecer el mejor valor posible en cada proyecto.
         </p>
     </div>
 
@@ -50,8 +54,8 @@
                 <div id="demo1" class="pt-3">
                     <p class="title-dest font-weight-bold">Estudios superiores</p>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">CFGM de Sistemas Microinformáticos y Redes</li>
                         <li class="list-group-item">CFGS de Desarrollo de Aplicaciones Web</li>
+                        <li class="list-group-item">CFGM de Sistemas Microinformáticos y Redes</li>
                     </ul>
                 </div>
             </div>
@@ -63,16 +67,16 @@
                 <div id="demo2" class="pt-3">
                     <p class="title-dest font-weight-bold">Leguajes de Programación / Marcado</p>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">JavaScript</li>
-                        <li class="list-group-item">PHP</li>
-                        <li class="list-group-item">Python</li>
                         <li class="list-group-item">Java</li>
+                        <li class="list-group-item">PHP</li>
+                        <li class="list-group-item">JavaScript</li>
+                        <li class="list-group-item">Python</li>
                         <li class="list-group-item" data-toggle="collapse" data-target="#demo4"><i class="bi bi-caret-down-fill" id="arrow" onclick="changeArrow()"></i></li>
                         <div id="demo4" class="collapse">
                             <ul class="list-group list-group-flush">
+                                <li class="list-group-item">MySql</li>
                                 <li class="list-group-item">HTML</li>
                                 <li class="list-group-item">CSS</li>
-                                <li class="list-group-item">MySql</li>
                             </ul>
                         </div>
                     </ul>
@@ -86,6 +90,7 @@
                 <div id="demo3" class="pt-3">
                     <p class="title-dest font-weight-bold">Laboral</p>
                     <ul class="list-group list-group-flush">
+                        <li class="list-group-item">RIU Hotels & Resorts - Desarrollador Java</li>
                         <li class="list-group-item">Juniper Travel Technology - Prácticas</li>
                         <li class="list-group-item">Urbaser - Estudios de Campo</li>
                     </ul>
