--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </div>
     <div class="container text-center font-weight-bold container-description">
         <p class="m-0">
-            Desarrollador Backend especializado en Java con experiencia en el desarrollo de aplicaciones utilizando Spring Boot y arquitecturas de microservicios.<br>
+            Desarrollador Backend especializado en Java con experiencia en el desarrollo de aplicaciones utilizando Spring Boot y arquitecturas de microservicios.<br><br>
 
-Me gusta por crear soluciones eficientes y escalables y tengo conocimientos de bases de datos. Además, poseo conocimientos en pruebas unitarias, garantizando la calidad y fiabilidad del software.<br>
+Me gusta por crear soluciones eficientes y escalables y tengo conocimientos de bases de datos. Además, poseo conocimientos en pruebas unitarias, garantizando la calidad y fiabilidad del software.<br><br>
 
 Me gusta mantenerme actualizado con la tecnología, ya que soy un apasionado de ella y me dedico a aprender continuamente para ofrecer el mejor valor posible en cada proyecto.
         </p>
